ncc/testsuite/negative/Issue-1287.n
using Nemerle.Utility;
using System.Console;

[Record]
public class Identifier
{
  [Accessor] id : string;
  public override ToString() : string
  {
    id
  }
}
public variant Expr
{
  | BinaryOperator { left : Expr; right : Expr; op : Identifier; }
}

module Program
{
  Main() : void
  {
    def x : Expr = Expr.BinaryOperator(null, null, Identifier("=="));
    match (x)
    {
      | Expr.BinaryOperator(op=Identifier where(id="==")) => WriteLine("Оператор '==' !") // E: is not accessible
      | _ => WriteLine("Что-то другое.")
    }
  }
}